# ads

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md
task2/: CMakeLists.txt  LinkedList.h  Node.h  elem.cpp  elem.h  main.cpp  utils.h
task3/: CMakeLists.txt  algo.cpp  algo.h  bst.h  main.cpp  measurements.txt  ordered_set.h  utils.h
task4/: CMakeLists.txt
task4/lib/: CMakeLists.txt  avl.h
task4/tests/: CMakeLists.txt  multiset_tests.cpp  set_tests.cpp  tree_tests.cpp
task5/: CMakeLists.txt  algo.cpp  algo.h  bst.h  main.cpp
task6/: CMakeLists.txt  benchmark.txt
task6/benchmarks/: CMakeLists.txt  CMakeLists.txt.benchmark  p_queue_benchmark.cpp
task6/lib/: CMakeLists.txt  p_queue.h  p_queue_arr.h
task6/tests/: CMakeLists.txt  p_queue_arr_tests.cpp  p_queue_tests.cpp
